fix AComparatorExecutor